--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "svg-react-loader": "^0.4.6",
+    "tailwindcss": "^3.2.7"
   }
 }
